# nextech-agent-template

./: .gitignore  README.md  agent-team.py  agents.py  demo.py  pyproject.toml  tts.py
misc/: agent-workflow.py  demo.py
output/: 2026_06_26__14_49_article.html  2026_06_26__14_49_article.md  2026_06_26__14_49_script.txt  article_20260623_110306.html  article_20260623_110306.md  news.md  script.md  script_20260623_110306.txt  updates.md
